[package]
edition = "2021"
name = "hts221"
version = "1.0.0"
authors = ["Daniel Gallagher <pdanielgallagher@gmail.com>", "Friedrich Vandenberghe <friedrich@friedrichvdb.be>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Interface to ST Micro HTS221 humidity and temperature sensor"
keywords = ["i2c", "bare-metal", "embedded-hal-driver"]
license = "MIT/Apache-2.0"
repository = "https://github.com/Zelzahn/hts221"
readme = "README.md"

[dependencies]
embedded-hal = "1.0.0"

[dev-dependencies]
cortex-m-semihosting = "0.5.0"
linux-embedded-hal = "0.4.0"

[dev-dependencies.cortex-m]
version = "0.7.7"

[dev-dependencies.cortex-m-rt]
version= "0.7.3"

[dev-dependencies.stm32f30x-hal]
version = "0.2.0"
features = ["rt"]
